# pic-returns-metrics

./: .gitignore  pyproject.toml
analytics/: plot_gen.py
analytics/data/: gbm_bench.csv  gbm_benchmark_net.csv  gbm_bottom_net.csv  gbm_calendar.csv  gbm_strat.csv  regr_bench.csv  regr_calendar.csv  regr_strat.csv  regression_benchmark_net.csv  regression_bottom_net.csv
analytics/helpers/: dataframes.py  plotting.py
db/: factor_portfolio_results.sql  portfolio_metrics.sql  regr_portfolio_metrics.sql  regression_portfolio_results.sql
notebooks/: factor_returns_metrics.ipynb  portfolio_stats.csv
notebooks/helpers/: fin_stats.py  plotting.py  returns_dfs.py
src/returns_metrics/: __main__.py
src/returns_metrics/model/: __init__.py  base.py  entity.py  factor_portfolio_results.py  gbm_metrics.py  metrics.py  portfolio_metrics.py  regression_metrics.py  regression_portfolio_metrics.py  regression_portfolio_results.py
src/returns_metrics/persistence/: __init__.py  source.py  target.py
src/returns_metrics/queries/: __init__.py  factor_portfolio_results.py  portfolio_metrics.py  regression_portfolio_metrics.py  regression_portfolio_results.py
