[tool.poetry]
name = "returns-metrics"
version = "0.1.0"
description = ""
authors = ["TomasJuhos <tomas.juhos@2iqresearch.com>"]
readme = "README.md"
packages = [{include = "returns_metrics"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
